--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@siemens/ix": "^3.1.0",
+    "@siemens/ix-icons": "^3.1.1",
+    "@siemens/ix-react": "^3.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
