--- a/package.json
+++ b/package.json
@@ -1,36 +1,59 @@
 {
-  "name": "react-vite-template",
-  "homepage": "https://tonyamende.github.io/react-vite-template/",
+  "name": "ix-react-starter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -p ./tsconfig.app.json && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "test": "vitest",
+    "e2e": "playwright test"
   },
   "dependencies": {
-    "@ag-grid-community/core": "^32.3.5",
-    "@ag-grid-community/react": "^32.3.5",
-    "@siemens/ix": "^3.1.0",
-    "@siemens/ix-icons": "^3.1.1",
-    "@siemens/ix-react": "^3.1.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "@siemens/ix": "3.0.0",
+    "@siemens/ix-aggrid": "3.0.0",
+    "@siemens/ix-echarts": "3.0.0",
+    "@siemens/ix-icons": "3.0.0",
+    "@siemens/ix-react": "3.0.0",
+    "ag-grid-community": "32.2.1",
+    "ag-grid-react": "32.2.1",
+    "clsx": "^2.1.1",
+    "echarts": "^5.5.1",
+    "echarts-for-react": "^3.0.2",
+    "element-internals-polyfill": "^3.0.1",
+    "i18next": "^23.15.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.0.2",
+    "react-router-dom": "^6.27.0",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
+    "@eslint/js": "^9.9.0",
+    "@playwright/test": "^1.51.1",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.4.0",
+    "@vitest/browser": "^3.1.1",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.14",
-    "gh-pages": "^6.2.0",
-    "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "fs-extra": "^11.2.0",
+    "globals": "^15.9.0",
+    "prettier": "^3.3.3",
+    "shadow-dom-testing-library": "^1.12.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.1",
+    "vitest-browser-react": "^0.1.1"
   }
 }
